# va-filter

./: .gitignore  Cargo.toml  Overview.drawio  README.md  osx_vst_bundler.sh
benches/: benchmark.rs
src/: bin.rs  editor.rs  filter.rs  filter_parameters.rs  filter_params.rs  filter_params_nih.rs  lib pre antisat.rs  lib.rs  main.rs  parameter.rs  resampling.rs  style.css  ui.rs  utils.rs
src/editor/: plot.rs
src/filter/: preprocess.rs  sallen_key.rs  solver.rs  svf.rs  svf_old.rs
src/ui/: plot.rs
xtask/: Cargo.toml
