[package]
name = "svf_filter"
version = "0.1.0"
authors = ["Fredemus <frederik.halkjaer1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "svf_gui"
crate-type = ["cdylib"]
[[bin]]
name = "svf_gui_bin"
path = "src/bin.rs"
[dependencies]
# vst = { git = "https://github.com/rust-dsp/rust-vst" }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug", features = ["assert_process_allocs"] }
# baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "d399c1275522ae75f5a82caadd904df2685c8660" }
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "b3712638bacb3fdf2883cb5aa3f6caed0e91ac8c"} # newest
vizia = {git = "https://github.com/vizia/vizia", branch = "main", features = ["baseview"], default-features = false}
femtovg = {version = "0.3.0", default-features = false}

raw-window-handle = "0.3"
num = "0.4.0"
hound = "3.4.0"
rand = "0.8.4"
# simd optimizations
core_simd = { git = "https://github.com/rust-lang/portable-simd" }
std_float = { git = "https://github.com/rust-lang/portable-simd" }
# packed_simd = { version = "0.3.6", package = "packed_simd_2" }

# data serialization for presets 
# serde = { version = "1.0.130", features = ["derive"] }
bincode = "1.3.3"


[workspace]
members = ["xtask"]