[package]
name = "va-filter"
version = "0.1.0"
authors = ["Fredemus <frederik.halkjaer1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "va_filter"
path = "src/lib.rs"
crate-type = ["cdylib","lib"]
[[bin]]
name = "va_filter_standalone"
path = "src/main.rs"
[dependencies]
# vst = { git = "https://github.com/rust-dsp/rust-vst" }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug", rev = "fae7050113dff12db6b9800f876d27496e3d4e85", features = ["assert_process_allocs", "standalone"] }
# baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "d399c1275522ae75f5a82caadd904df2685c8660" }
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "eae4033e7d2cc9c31ccaa2794d5d08eedf2f510c", features = ["opengl"] }
vizia = {git = "https://github.com/vizia/vizia", rev = "676afdf46ca73365e34f0c6d9cb838cc5b778e0b", features = ["baseview"], default-features = false}

raw-window-handle = "0.3"
num = "0.4.0"
hound = "3.4.0"
rand = "0.8.4"
# simd optimizations
core_simd = { git = "https://github.com/rust-lang/portable-simd" }
std_float = { git = "https://github.com/rust-lang/portable-simd" }

[dev-dependencies]
criterion = "0.3"
[[bench]]
name = "benchmark"
harness = false

[workspace]
members = ["xtask"]